[package]
name = "ssh-mesh"
version = "0.0.1"
edition = "2021" 
default-run = "ssh-mesh"

[dependencies]
jni = "0.21.1"
jni-sys = "0.3.0"
nix = { version = "0.29.0", features = ["socket", "process"] }
libc = "0.2.161"
openssl = { version = "0.10", features = ["vendored"] }
libffi = "5.0.0"
libffi-sys = "4.0.0"
bytes = "1"
futures = "0.3"
anyhow = "1.0.48"
libloading = "0.9"
regex = "1.5"
log = "0.4.26"
async-trait = "0.1"
rustix = { version = "0.38.32", features = ["libc", "fs", "alloc", "event", "libc_errno", "mm", "std", "use-libc", "use-libc-auxv"] }
ctrlc = "3.2.1"
serde={version="1.0.130", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber ="0.3"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
clap = { version = "4.0", features = ["derive"] }
hyper = {version = "1.8", features = ["full"]}
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6.0"
russh = "0.55.0"
russh-keys = "0.49.2"
ssh-key = { version = "0.6.7", features = ["std"] }
rand = "0.8"
env_logger = "0.10"
http = "1.4.0"
http-body-util = "0.1.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3.3"
serial_test = "3.0"

[lib]
# cdylib ?
name = "sshmesh"
crate-type = ["dylib", "rlib"]

[[bin]]
name = "ssh-mesh"
path = "src/main.rs"
