[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "ssh-mesh"
version = "0.1.0"
description = "Mesh using SSH in python"
authors = [
    { name = "Costin Manolache", email = "costin@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "paramiko>=2.7.0",
    "cryptography>=3.0.0",
]
