[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dmesh"
version = "0.2.0"
description = "Pure Python mesh UDS client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
dmesh = "dmesh.__main__:main"
