[package]
name = "rust-9p"
version = "0.0.1"
edition = "2021"
authors = ["Ryo Munakata (pfpacket) <afpacket@gmail.com>"]
description = "Filesystems library using 9P2000.L protocol, an extended variant of 9P from Plan 9"
documentation = "https://pfpacket.github.io/rust-9p/rs9p/index.html"
repository = "https://github.com/pfpacket/rust-9p"
readme = "README.md"
keywords = ["9p", "Plan9", "v9fs", "filesystem", "network"]
categories = ["filesystem", "network-programming"]
license-file = "LICENSE"

[lib]
name = "rs9p"
crate-type = ["rlib"]

[[bin]]
name = "unpfs"
path = "src/main.rs"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num-traits = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "user"] }
byteorder = "1.5"
bitflags = "1.3"
enum_primitive = "*"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["fs"] }
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
filetime = "0.2"
clap = { version = "4.5", features = ["derive"] }
