[package]
name = "dmesh"
version = "0.0.1"
edition = "2024" 

[features]
default = ["python", "jni-wrapper"]
python = ["dep:pyo3"]
jni-wrapper = ["dep:jni"]

[dependencies]
ssh-mesh = { path = "../ssh-mesh" }
mesh-tun = { path = "../tun", default-features = false }
pmond = { path = "../pmond" }
lmesh = { path = "../lmesh" }
mesh = { path = "../mesh" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
log = "0.4"
libc = "0.2"
hyper-util = { version = "0.1", features = ["full"] }

# Optional: language-specific wrappers
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
jni = { version = "0.21.1", optional = true }

[dev-dependencies]
tempfile = "3.3"
serial_test = "3.0"

[lib]
name = "dmesh"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "dmesh"
path = "src/main.rs"
