[workspace]
[package]
name = "lmesh"
version = "0.0.1"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["socket", "process"] }
libc = "0.2.161"
log = "0.4.26"
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
rustix = { version = "0.38.32", features = ["libc", "fs", "alloc", "event", "libc_errno", "mm", "std", "use-libc", "use-libc-auxv"] }
embedded-io = { version = "0.6", features = ["std"] }
embedded-io-async = { version = "0.6", features = ["std"] }
bytes = "1"
hyper = { version = "1.8", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2"] }
http = "1.4.0"
http-body-util = "0.1.3"
openssl = "0.10"
anyhow = "1.0"
env_logger = "0.10"

[lib]
name = "lmesh"
crate-type = ["staticlib", "rlib"]
