[package]
name = "lmesh"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
tracing = "0.1"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
toml = "0.8"
sha2 = "0.11"
p256 = { version = "=0.14.0-rc.7", features = ["pem", "ecdsa"] }
rand = "0.10"
anyhow = "1.0"
libc = "0.2"
mesh = { path = "../mesh" }

[lib]
name = "lmesh"
