[package]
name = "mesh-init"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mesh-init"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
mesh = { path = "../mesh" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "sched", "user"] }
thiserror = "2.0"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.3"
