[package]
name = "mesh-init"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mesh-init"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
mesh = { path = "../mesh" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "sched", "user", "socket", "uio"] }
thiserror = "2.0"
parking_lot = "0.12"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
schemars = "0.8"
users = "0.11"
utoipa = "5.4.0"

[dev-dependencies]
tempfile = "3.3"
