[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "0.8"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "fs", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
hyper = { version = "1.8.1", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2", "service"] }
http-body-util = "0.1.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io", "compat"] }
axum = "0.7"
thiserror = "2.0.18"
async-trait = "0.1.89"
chrono = "0.4"
