[package]
name = "mesh"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "fs", "rt-multi-thread", "io-std", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
hyper = { version = "1.8.1", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2", "service"] }
http-body-util = "0.1.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io", "compat"] }
axum = "0.7"
thiserror = "2.0.18"
async-trait = "0.1.89"
chrono = "0.4"
toml = "0.8"
nix = { version = "0.29", features = ["socket", "uio"] }
parking_lot = "0.12"
