[package]
name = "mesh"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "fs", "rt-multi-thread", "io-std", "process", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minicbor = { version = "2.2", features = ["std"] }
libc = "0.2"
thiserror = "2.0.18"
async-trait = "0.1.89"
chrono = "0.4"
toml = "0.8"
nix = { version = "0.29", features = ["socket", "uio"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
