[package]
name = "pmond"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pmond"
path = "src/main.rs"

[dependencies]
schemars = "0.8"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "fs", "rt-multi-thread", "tracing", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["socket", "process"] }
libc = "0.2"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
mime_guess = "2.0"
hyper = { version = "1.8.1", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2"] }
http-body-util = "0.1.3"
bytes = "1"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
tokio-util = { version = "0.7", features = ["io", "compat"] }
users = "0.11"
ws = { path = "../ws" }
axum = "0.7"
rust-embed = { version = "8.5", features = ["axum"] }
tower-http = { version = "0.5", features = ["fs"] }
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "0.13.0", features = [
   "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars"]}
    
[dev-dependencies]
tempfile = "3.3"
