[package]
name = "pmond"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pmond"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "fs", "rt-multi-thread", "tracing", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["socket", "process"] }
libc = "0.2"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
users = "0.11"
clap = { version = "4.5", features = ["derive"] }

thiserror = "2.0.18"
parking_lot = "0.12.5"
schemars = "0.8"
utoipa = "5.4.0"
mesh = { version = "0.1.0", path = "../mesh" }
    
[dev-dependencies]
tempfile = "3.3"
