[package]
name = "python-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssh_mesh_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ssh-mesh = { path = "../ssh-mesh" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"

[dev-dependencies]
