[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ssh-mesh"
version = "0.1.0"
description = "Python wrapper for ssh-mesh"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[tool.maturin]
# The name of the built shared library should be ssh_mesh_py
# and it should be placed inside the ssh_mesh package.
module-name = "ssh_mesh.ssh_mesh_py"
python-source = "."
python-packages = ["ssh_mesh"]
features = ["pyo3/extension-module"]
