[package]
name = "russhd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "russhd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.48"
log = "0.4.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Full 
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "rt-multi-thread", "process", "fs"] }
openpty = "0.2"
nix = { version = "0.27", default-features = false, features = ["process", "fs"] }
russh = { version = "0.55.0", default-features = false, features = ["ring"] }
russh-keys = { version = "0.49.2" }
ssh-key = { version = "0.6.7" }
hyper = { version = "1.8", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2"] }
bytes = "1"
http-body-util = "0.1.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.3"
once_cell = "1.19.0"
tokio = { version = "1", features = ["test-util", "macros"] }
