[package]
name = "rvirtiofsd"
version = "0.1.0"
edition = "2021"

[dependencies]
virtiofsd = { version = "1.13.3", default-features = false }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vm-memory = { version = "0.16.2", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.14.0"
libc = "0.2"
vhost = "0.13.0"
vhost-user-backend = "0.17.0"
bytes = "1"
anyhow = "1"
