[package]
name = "ssh-mesh"
version = "0.1.0"
edition = "2021"
default-run = "ssh-mesh"

[[bin]]
name = "ssh-mesh"
path = "src/main.rs"

[[bin]]
name = "h2t"
path = "src/bin/h2t.rs"

[[bin]]
name = "wst"
path = "src/bin/wst.rs"

[[bin]]
name = "udst"
path = "src/bin/udst.rs"

[[bin]]
name = "meshkeys"
path = "src/bin/meshkeys.rs"

[features]
default = ["test-utils"]
test-utils = ["tempfile", "once_cell"]

[dependencies]
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Full 
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "rt-multi-thread", "process", "fs"] }
openpty = "0.2"
nix = { version = "0.29", default-features = false, features = ["process", "fs", "user"] }
russh = { version = "0.55.0", default-features = false, features = ["ring"] }
russh-keys = { version = "0.49.2" }
ssh-key = { version = "0.6.7", features = ["alloc", "ecdsa", "p256"] }
hyper = { version = "1.8", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "server-auto", "http1", "http2", "client", "client-legacy", "service"] }
bytes = "1"
http-body-util = "0.1.3"
rand = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
ws = { path = "../ws" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "handshake", "connect"] }
fastwebsockets = { version = "0.8", features = ["upgrade"] }
url = "2.5"
futures-util = "0.3"
tracing-perfetto = "0.1.5"
tempfile = { version = "3.3", optional = true }
once_cell = { version = "1.19.0", optional = true }
rcgen = { version = "0.14.7", default-features = false, features = ["pem", "ring"] }
x509-parser = "0.18.0"
ring = { version = "0.17.14", features = ["std"] }
p256 = { version = "0.13.2", features = ["std", "pem", "pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["std", "pem"] }
chrono = "0.4.43"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
serde_json = "1.0"
