[package]
name = "traceweb"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
base64 = "0.22.1"
mesh = { path = "../mesh" }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = "8.11.0"
mime_guess = "2.0"
libc = "0.2"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"
