[package]
name = "traceweb"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
clap = { version = "4.5", features = ["derive", "env"] }
mesh = { path = "../mesh" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
