[package]
name = "mesh-tun"
version = "0.1.0"
edition = "2021"

[dependencies]
mesh = { path = "../mesh" }
smoltcp = { version = "0.13", default-features = false, features = [
    "std", "medium-ip", "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-udp", "socket-raw", "log", "async"
] }
tun-rs = { version = "2.8", features = ["async"] }
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "time"] }
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
libc = "0.2"
crossbeam-queue = "0.3.12"
