[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "sync", "io-util", "rt", "macros", "fs", "rt-multi-thread", "tracing", "signal"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hyper = { version = "1.8.1", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2"] }
http-body-util = "0.1.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4.26"
anyhow = "1.0.48"
chrono = "0.4"
env_logger = "0.10"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-routing"] }
